--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
         <h1>Ramen Rater</h1>
    </div>
    <div id  ="ramen-menu">
-        <img src="./images/shoyu.jpg" alt="shoyu-ramen-image" id="1">
-        <img src="./images/naruto.jpg" alt="Naruto-ramen-image" id="2">
-        <img src="./images/nirvana.jpg" alt="miso-ramen-image" id="3">
-        <img src="./images/gyukotsu.jpg" alt="gyukotsu-ramen-image" id="4">
-        <img src="./images/kojiro.jpg" alt="kojiro-ramen-image" id="5">
+    <img src="" alt="" onclick="handleClick(ramen)">
+        
    </div>
     <div class="display-area">
         <div class="image-container">
