edited html and css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input type="text" id="rating" name="rating">
             <label for="comment">Comment:</label>
             <textarea type="text" id="comment" name="comment"></textarea>
-            <button type="submit">Submit</button>
+            <button type="submit">Add Ramen</button>
         </form>
     </div>
 <script src="./index.js"></script>    
