--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <h1>Ramen Rater</h1>
    </div>
    <div id  ="ramen-menu">
-    <img src="" alt="" onclick="handleClick(ramen)">
-        
+            
    </div>
     <div class="display-area">
         <div class="image-container">
@@ -39,7 +38,7 @@
             <label for="image">Image:</label>
             <input type="text" id="image" name="image">
             <label for="rating">Rating:</label>
-            <input type="text" id="rating" name="rating">
+            <input type="text" id="rating" name="rating" min="1" max="10">
             <label for="comment">Comment:</label>
             <textarea type="text" id="comment" name="comment"></textarea>
             <button type="submit">Add Ramen</button>
